--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.4.1
 backports.zoneinfo==0.2.1
 certifi==2021.10.8
 charset-normalizer==2.0.10
+cloudinary==1.29.0
 coverage==6.3
 dj-database-url==0.5.0
 Django==4.0.1
+django-cloudinary-storage==0.3.0
 django-crispy-forms==1.13.0
 django-heroku==0.3.1
 gunicorn==20.1.0
@@ -13,6 +15,7 @@ Pillow==9.0.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 requests==2.27.1
+six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.8
 whitenoise==5.3.0
