--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.10
 cloudinary==1.29.0
 coverage==6.3
+cryptography==36.0.1
+defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==4.0.1
 django-cloudinary-storage==0.3.0
@@ -11,11 +14,18 @@ django-crispy-forms==1.13.0
 django-heroku==0.3.1
 gunicorn==20.1.0
 idna==3.3
+oauthlib==3.2.0
 Pillow==9.0.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.3.0
+python3-openid==3.2.0
 requests==2.27.1
+requests-oauthlib==1.3.1
 six==1.16.0
+social-auth-app-django==5.0.0
+social-auth-core==4.2.0
 sqlparse==0.4.2
 urllib3==1.26.8
 whitenoise==5.3.0
